Fix event calendar height on mobile devices

--- a/styles/events.css
+++ b/styles/events.css
@@ -53,7 +53,7 @@ button {
     border: 0;
 }
 #calendarContainer {
-    height: 80vh;
+    min-height: 80vh;
 }
 .replayContainer {
     display: none;
